--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
   font-family: 'Poppins', sans-serif;
   background-color: #F0F3FB;
+  margin: 0;
+  padding: 0;
 }
 
 ul, ol {
@@ -18,7 +20,7 @@ ul, ol {
 
 #feedbackForm.show {
   opacity: 1;
-  max-height: 550px;
+  max-height: 590px;
 }
 
 .hidden {
@@ -29,13 +31,13 @@ ul, ol {
 #showFormButton{
   border: none;
   border-radius: 10px;
-  padding: 20px;
+  padding: 20px 50px;
+  white-space: nowrap;
   font-weight: 600;
   font-size: 16px;
   line-height: 125%;
   color: white;
   background-color: #000;
-  width: 300px;
   position: fixed;
   top: 10%;
   left: 50%;
@@ -62,9 +64,11 @@ ul, ol {
 form {
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  max-width: 325px;
   width: 100%;
   margin: 0 auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
   padding: 20px;
   border: 2px solid #000;
   border-radius: 15px;
@@ -115,7 +119,7 @@ label {
 input[type="text"],
 input[type="email"],
 textarea {
-  max-width: 400px;
+  max-width: 325px;
   padding: 18px 16px;
   border-radius: 10px;
   border: 1px solid #D8DADC;
@@ -133,8 +137,8 @@ textarea::placeholder{
 }
 
 textarea{
-  min-width: 368px;
-  max-width: 368px;
+  min-width: 293px;
+  max-width: 293px;
   min-height: 25px;
   max-height: 80px;
 }
